# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#declarative-config

[metadata]
name = ang
version = 0.0.1
description =
long_description = file: README.md

[options]
package_dir=
    =src
packages=find:
install_requires =
    click<=9

[options.entry_points]
console_scripts =
    ang = bin:main

[options.packages.find]
where=src