# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#declarative-config

[metadata]
name = ang
version = 0.0.2
description = Async web framework
long_description = file: README.md
long_description_content_type = text/markdown

author = Alex
author_email = alex@alpha.dev
url = https://github.com/c0ntribut0r/ang
project_urls =
    Website = https://ang.alpha.dev
classifiers =
    Programming Language :: Python :: 3
    # License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = ang
install_requires =
    aiofiles~=0.7
    alembic~=1.7.1
    click~=8.0
    environs~=9.3.3
    ipython~=7.27
    jinja2~=3.0
    pyhumps~=3.0
    sqlalchemy~=1.4.23
    starlette~=0.16
    uvicorn[standard]~=0.15
    WTForms-SQLAlchemy~=0.2
python_requires = >=3.8

[options.package_data]
# FUCK YOU DEVELOPERS OF DISTUTILS / SETUPTOOLS / WHEELS / EGGS AND SO ON!
ang = *, */*, */*/*, */*/*/*

[options.entry_points]
console_scripts =
    ang = ang.command_line:main
